@@ -2,10 +2,10 @@ package org.larrieulacoste.noe.al.trademe.features.invoices.web;
 
 
 import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.larrieulacoste.noe.al.trademe.domain.model.EntityId;
 import org.larrieulacoste.noe.al.trademe.features.invoices.application.query.*;
 import org.larrieulacoste.noe.al.trademe.features.invoices.domain.Invoice;
-import org.larrieulacoste.noe.al.trademe.features.invoices.kernel.InvoicesQueryBus;
+import org.larrieulacoste.noe.al.trademe.kernel.query.QueryBus;
+import org.larrieulacoste.noe.al.trademe.shared_kernel.model.EntityId;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -13,20 +13,19 @@ import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("invoice")
+@Produces(MediaType.APPLICATION_JSON)
 public final class InvoiceController {
-    private final InvoicesQueryBus queryBus;
+    private final QueryBus queryBus;
 
-    InvoiceController(InvoicesQueryBus queryBus) {
+    InvoiceController(QueryBus queryBus) {
         this.queryBus = queryBus;
     }
 
     @GET
     @Path("{invoiceId}")
     @Operation(summary = "Retrieve invoice by ID", description = "Retrieve invoice giving invoice's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoiceResponse getById(@PathParam("invoiceId") String invoiceId) {
         Invoice invoice = queryBus.send(new RetrieveInvoiceById(EntityId.of(invoiceId)));
         return getInvoiceResponse(invoice);
@@ -35,7 +34,6 @@ public final class InvoiceController {
     @GET
     @Path("contractor/{contractorId}")
     @Operation(summary = "Retrieve contractor invoices", description = "Retrieve contractor invoices giving contractor's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoicesResponse getByContractorId(@PathParam("contractorId") String contractorId) {
         List<Invoice> invoices = queryBus.send(new RetrieveContractorInvoices(EntityId.of(contractorId)));
 
@@ -45,7 +43,6 @@ public final class InvoiceController {
     @GET
     @Path("tradesman/{tradesmanId}")
     @Operation(summary = "Retrieve tradesman invoices", description = "Retrieve tradesman invoices giving tradesman's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoicesResponse getByTradesmanId(@PathParam("tradesmanId") String tradesmanId) {
         List<Invoice> invoices = queryBus.send(new RetrieveTradesmanInvoices(EntityId.of(tradesmanId)));
 
@@ -55,7 +52,6 @@ public final class InvoiceController {
     @GET
     @Path("contractor")
     @Operation(summary = "Retrieve contractor invoices", description = "Retrieve contractor invoices giving contractor's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoicesResponse getContractorsInvoices() {
         List<Invoice> invoices = queryBus.send(new RetrieveContractorsInvoices());
 
@@ -65,7 +61,6 @@ public final class InvoiceController {
     @GET
     @Path("tradesman")
     @Operation(summary = "Retrieve tradesman invoices", description = "Retrieve tradesman invoices giving tradesman's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoicesResponse getTradesmenInvoices() {
         List<Invoice> invoices = queryBus.send(new RetrieveTradesmenInvoices());
 
@@ -74,7 +69,6 @@ public final class InvoiceController {
 
     @GET
     @Operation(summary = "Retrieve invoices", description = "Retrieve all invoices")
-    @Produces(MediaType.APPLICATION_JSON)
     public InvoicesResponse getAll() {
         List<Invoice> invoices = queryBus.send(new RetrieveAllInvoices());
 
@@ -83,18 +77,18 @@ public final class InvoiceController {
 
     private InvoicesResponse getInvoicesResponse(List<Invoice> invoices) {
         return new InvoicesResponse(
-                invoices.stream().map(this::getInvoiceResponse).collect(Collectors.toList()),
+                invoices.stream().map(this::getInvoiceResponse).toList(),
                 invoices.size());
     }
 
     private InvoiceResponse getInvoiceResponse(Invoice invoice) {
         return new InvoiceResponse(
-                invoice.invoiceId.value,
-                invoice.memberType.value,
-                invoice.memberId.value,
-                invoice.occurredDate,
-                invoice.paymentMethodType.value,
-                invoice.amount.value
+                invoice.invoiceId().value(),
+                invoice.memberType().value,
+                invoice.memberId().value(),
+                invoice.occurredDate(),
+                invoice.paymentMethodType().value,
+                invoice.amount().value()
         );
     }
 }
