@@ -1,28 +1,32 @@
 package org.larrieulacoste.noe.al.trademe.features.members.application.command;
 
-import org.larrieulacoste.noe.al.trademe.application.event.ContractorEventEntity;
-import org.larrieulacoste.noe.al.trademe.application.event.ContractorUpdated;
-import org.larrieulacoste.noe.al.trademe.application.event.ContractorsSubscriptionPendingPayment;
+import org.larrieulacoste.noe.al.trademe.domain.event.ContractorUpdated;
+import org.larrieulacoste.noe.al.trademe.domain.event.ContractorsSubscriptionPendingPayment;
 import org.larrieulacoste.noe.al.trademe.features.members.domain.Contractor;
+import org.larrieulacoste.noe.al.trademe.features.members.domain.ContractorBuilder;
 import org.larrieulacoste.noe.al.trademe.features.members.domain.Contractors;
 import org.larrieulacoste.noe.al.trademe.features.members.domain.SubscriptionStatus;
 import org.larrieulacoste.noe.al.trademe.kernel.command.CommandHandler;
 import org.larrieulacoste.noe.al.trademe.kernel.event.ApplicationEvent;
 import org.larrieulacoste.noe.al.trademe.kernel.event.EventBus;
+import org.larrieulacoste.noe.al.trademe.shared_kernel.model.MemberPayment;
 
 import javax.enterprise.context.ApplicationScoped;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
-public class PublishContractorsPendingSubscriptionPaymentService implements CommandHandler<PublishContractorsPendingSubscriptionPayment, Void> {
+public class PublishContractorsPendingSubscriptionPaymentService
+        implements CommandHandler<PublishContractorsPendingSubscriptionPayment, Void> {
     private final Contractors contractors;
     private final EventBus<ApplicationEvent> eventBus;
+    private final ContractorBuilder contractorBuilder;
 
-    PublishContractorsPendingSubscriptionPaymentService(Contractors contractors, EventBus<ApplicationEvent> eventBus) {
+    PublishContractorsPendingSubscriptionPaymentService(Contractors contractors, EventBus<ApplicationEvent> eventBus,
+                                                        ContractorBuilder contractorBuilder) {
         this.contractors = Objects.requireNonNull(contractors);
         this.eventBus = eventBus;
+        this.contractorBuilder = Objects.requireNonNull(contractorBuilder);
     }
 
     @Override
@@ -34,31 +38,22 @@ public class PublishContractorsPendingSubscriptionPaymentService implements Comm
         eventBus.publish(
                 ContractorsSubscriptionPendingPayment.withContractors(
                         contractorsPendingPayment.stream()
-                                .map(contractor -> ContractorEventEntity.withEntityIdOnly(contractor.entityId))
-                                .collect(Collectors.toList())
-                )
-        );
+                                .map(contractor -> MemberPayment.of(contractor.entityId(), contractor.paymentMethod()))
+                                .toList()));
         return null;
     }
 
     public void updateSubscriptionToPending(Contractor contractor) {
-        Contractor updatedContractor = Contractor.of(
-                contractor.entityId,
-                contractor.lastname,
-                contractor.firstname,
-                contractor.email,
-                contractor.password,
-                SubscriptionStatus.PENDING_PAYMENT,
-                contractor.paymentMethod
-        );
+        contractorBuilder.clear();
+        contractorBuilder.withContractor(contractor).withSubscriptionStatus(SubscriptionStatus.PENDING_PAYMENT);
+        Contractor updatedContractor = contractorBuilder.build(contractor.entityId());
         contractors.save(updatedContractor);
-        eventBus.publish(ContractorUpdated.withContractor(ContractorEventEntity.of(
-                contractor.entityId,
-                contractor.lastname.value,
-                contractor.firstname.value,
-                contractor.email.value,
-                contractor.password.value,
-                contractor.paymentMethod
-        )));
+        eventBus.publish(ContractorUpdated.of(
+                contractor.entityId(),
+                contractor.firstname().value(),
+                contractor.lastname().value(),
+                contractor.email().value(),
+                contractor.paymentMethod()
+        ));
     }
 }
