@@ -1,28 +1,27 @@
 package org.larrieulacoste.noe.al.trademe.features.members.web;
 
-
 import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.larrieulacoste.noe.al.trademe.domain.model.EntityId;
 import org.larrieulacoste.noe.al.trademe.features.members.application.command.CreateContractor;
 import org.larrieulacoste.noe.al.trademe.features.members.application.command.DeleteContractor;
 import org.larrieulacoste.noe.al.trademe.features.members.application.command.UpdateContractor;
 import org.larrieulacoste.noe.al.trademe.features.members.application.query.RetrieveContractorById;
 import org.larrieulacoste.noe.al.trademe.features.members.application.query.RetrieveContractors;
 import org.larrieulacoste.noe.al.trademe.features.members.domain.Contractor;
-import org.larrieulacoste.noe.al.trademe.features.members.kernel.MembersCommandBus;
-import org.larrieulacoste.noe.al.trademe.features.members.kernel.MembersQueryBus;
+import org.larrieulacoste.noe.al.trademe.kernel.command.CommandBus;
+import org.larrieulacoste.noe.al.trademe.kernel.query.QueryBus;
+import org.larrieulacoste.noe.al.trademe.shared_kernel.model.EntityId;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("contractor")
+@Produces(MediaType.APPLICATION_JSON)
 public final class ContractorController {
-    private final MembersQueryBus queryBus;
-    private final MembersCommandBus commandBus;
+    private final QueryBus queryBus;
+    private final CommandBus commandBus;
 
-    ContractorController(MembersQueryBus queryBus, MembersCommandBus commandBus) {
+    ContractorController(QueryBus queryBus, CommandBus commandBus) {
         this.queryBus = queryBus;
         this.commandBus = commandBus;
     }
@@ -30,7 +29,6 @@ public final class ContractorController {
     @GET
     @Path("{userId}")
     @Operation(summary = "Retrieve contractor by ID", description = "Retrieve contractor giving contractor's ID")
-    @Produces(MediaType.APPLICATION_JSON)
     public ContractorResponse getById(@PathParam("userId") String userId) {
         Contractor contractor = queryBus.send(new RetrieveContractorById(EntityId.of(userId)));
         return getContractorResponse(contractor);
@@ -38,7 +36,6 @@ public final class ContractorController {
 
     @GET
     @Operation(summary = "Retrieve contractors", description = "Retrieve all contractors")
-    @Produces(MediaType.APPLICATION_JSON)
     public ContractorsResponse getAll() {
         List<Contractor> contractors = queryBus.send(new RetrieveContractors());
 
@@ -47,33 +44,30 @@ public final class ContractorController {
 
     @POST
     @Operation(summary = "Create contractor", description = "Register a new contractor to TradeMe")
-    @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.APPLICATION_JSON)
     public ContractorResponse register(ContractorRequest contractor) {
         EntityId userId = commandBus.send(new CreateContractor(
-                contractor.firstname,
-                contractor.lastname,
-                contractor.email,
-                contractor.password,
-                contractor.paymentMethodType,
-                contractor.paymentMethodRessource));
+                contractor.firstname(),
+                contractor.lastname(),
+                contractor.email(),
+                contractor.password(),
+                contractor.paymentMethodType(),
+                contractor.paymentMethodRessource()));
 
-        return new ContractorResponse(userId.value, null, null, null);
+        return new ContractorResponse(userId.value(), null, null, null);
     }
 
     @PUT
     @Path("{contractorId}")
     @Operation(summary = "Update contractor", description = "Update contractor in TradeMe")
-    @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.APPLICATION_JSON)
     public ContractorResponse update(@PathParam("contractorId") String contractorId, ContractorRequest contractor) {
         Contractor updatedContractor = commandBus.send(new UpdateContractor(
                 contractorId,
-                contractor.firstname,
-                contractor.lastname,
-                contractor.email,
-                contractor.password
-        ));
+                contractor.firstname(),
+                contractor.lastname(),
+                contractor.email(),
+                contractor.password()));
 
         return getContractorResponse(updatedContractor);
     }
@@ -81,7 +75,6 @@ public final class ContractorController {
     @DELETE
     @Path("{contractorId}")
     @Operation(summary = "Delete contractor", description = "Delete contractor from TradeMe")
-    @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.APPLICATION_JSON)
     public ContractorResponse delete(@PathParam("contractorId") String contractorId) {
         commandBus.send(new DeleteContractor(contractorId));
@@ -91,16 +84,15 @@ public final class ContractorController {
 
     private ContractorsResponse getContractorsResponse(List<Contractor> contractors) {
         return new ContractorsResponse(
-                contractors.stream().map(this::getContractorResponse).collect(Collectors.toList()),
+                contractors.stream().map(this::getContractorResponse).toList(),
                 contractors.size());
     }
 
     private ContractorResponse getContractorResponse(Contractor contractor) {
         return new ContractorResponse(
-                contractor.entityId.value,
-                contractor.firstname.value,
-                contractor.lastname.value,
-                contractor.email.value
-        );
+                contractor.entityId().value(),
+                contractor.firstname().value(),
+                contractor.lastname().value(),
+                contractor.email().value());
     }
 }
